RESOLVED FIXED93791
Tick marks don't match thumb when applying paddin or border to input type=range
https://bugs.webkit.org/show_bug.cgi?id=93791
Summary Tick marks don't match thumb when applying paddin or border to input type=range
Keishi Hattori
Reported 2012-08-12 21:17:30 PDT
Tick marks don't match thumb when styling input type=range
Attachments
Test case (290 bytes, text/html)
2012-08-13 19:13 PDT, Keishi Hattori
no flags
Test case screen shot (11.44 KB, image/png)
2012-08-13 19:15 PDT, Keishi Hattori
no flags
Patch (15.98 KB, patch)
2012-08-23 22:14 PDT, Keishi Hattori
no flags
Archive of layout-test-results from gce-cr-linux-06 (641.78 KB, application/zip)
2012-08-24 00:03 PDT, WebKit Review Bot
no flags
Patch (28.28 KB, patch)
2012-08-24 01:38 PDT, Keishi Hattori
no flags
Works with transforms and added description to test. (36.60 KB, patch)
2012-08-24 01:44 PDT, Keishi Hattori
no flags
Added mention to Bug 94915 in ChangeLog and added TestExpectation entries (37.86 KB, patch)
2012-08-24 02:05 PDT, Keishi Hattori
no flags
Archive of layout-test-results from gce-cr-linux-08 (385.62 KB, application/zip)
2012-08-24 04:39 PDT, WebKit Review Bot
no flags
Patch (37.97 KB, patch)
2012-08-26 23:54 PDT, Keishi Hattori
no flags
Patch (37.92 KB, patch)
2012-08-27 05:11 PDT, Keishi Hattori
no flags
Patch (37.87 KB, patch)
2012-08-30 05:06 PDT, Keishi Hattori
no flags
Patch (37.88 KB, patch)
2012-08-30 05:07 PDT, Keishi Hattori
no flags
Kent Tamura
Comment 1 2012-08-13 18:15:43 PDT
(In reply to comment #0) > Tick marks don't match thumb when styling input type=range What style? You should add information to reproduce the bug.
Keishi Hattori
Comment 2 2012-08-13 19:13:45 PDT
Created attachment 158190 [details] Test case
Keishi Hattori
Comment 3 2012-08-13 19:15:49 PDT
Created attachment 158191 [details] Test case screen shot Applying padding or border makes the tracking element smaller.
Keishi Hattori
Comment 4 2012-08-23 22:14:50 PDT
Kent Tamura
Comment 5 2012-08-23 22:44:14 PDT
Comment on attachment 160328 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=160328&action=review > Source/WebCore/rendering/RenderTheme.cpp:1012 > + trackBounds = trackRenderer->absoluteBoundingBoxRectIgnoringTransforms(); We had better add a comment why IngoringTransforms is ok. BTW, do we have a test for a transformed <input type=range> with tick marks? > LayoutTests/ChangeLog:12 > + * platform/chromium-mac/fast/forms/datalist/input-appearance-range-with-padding-with-datalist-expected.png: Added. We had better mention a bug of track rendering with padding.
WebKit Review Bot
Comment 6 2012-08-24 00:03:47 PDT
Comment on attachment 160328 [details] Patch Attachment 160328 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13595036 New failing tests: fast/forms/datalist/input-appearance-range-with-datalist.html fast/forms/datalist/input-appearance-range-with-padding-with-datalist.html fast/forms/datalist/input-appearance-range-with-datalist-zoomed.html
WebKit Review Bot
Comment 7 2012-08-24 00:03:50 PDT
Created attachment 160347 [details] Archive of layout-test-results from gce-cr-linux-06 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-06 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Keishi Hattori
Comment 8 2012-08-24 01:38:33 PDT
Keishi Hattori
Comment 9 2012-08-24 01:42:23 PDT
(In reply to comment #5) > (From update of attachment 160328 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=160328&action=review > > > Source/WebCore/rendering/RenderTheme.cpp:1012 > > + trackBounds = trackRenderer->absoluteBoundingBoxRectIgnoringTransforms(); > > We had better add a comment why IngoringTransforms is ok. > > BTW, do we have a test for a transformed <input type=range> with tick marks? I had not tested with transforms. > > LayoutTests/ChangeLog:12 > > + * platform/chromium-mac/fast/forms/datalist/input-appearance-range-with-padding-with-datalist-expected.png: Added. > > We had better mention a bug of track rendering with padding. I'm not sure what you meant. Should I add a description linking to this bug to the test input-appearance-range-with-padding-with-datalist.html?
Keishi Hattori
Comment 10 2012-08-24 01:44:22 PDT
Created attachment 160357 [details] Works with transforms and added description to test.
Kent Tamura
Comment 11 2012-08-24 01:48:01 PDT
(In reply to comment #9) > > > + * platform/chromium-mac/fast/forms/datalist/input-appearance-range-with-padding-with-datalist-expected.png: Added. > > > > We had better mention a bug of track rendering with padding. > I'm not sure what you meant. Should I add a description linking to this bug to the test input-appearance-range-with-padding-with-datalist.html? I meant we had a bug that paintSliderTrack() didn't take account of paddings. e.g. Sliders in this test have min=0 max=100, also they have tick marks at 0, 100, and so on. However Slider tracks don't start at the 0 tick mark and don't end at the 100 tick mark.
Keishi Hattori
Comment 12 2012-08-24 02:05:44 PDT
Created attachment 160363 [details] Added mention to Bug 94915 in ChangeLog and added TestExpectation entries
Kent Tamura
Comment 13 2012-08-24 02:07:05 PDT
Comment on attachment 160363 [details] Added mention to Bug 94915 in ChangeLog and added TestExpectation entries ok
WebKit Review Bot
Comment 14 2012-08-24 04:39:54 PDT
Comment on attachment 160363 [details] Added mention to Bug 94915 in ChangeLog and added TestExpectation entries Attachment 160363 [details] did not pass chromium-ews (chromium-xvfb): Output: http://queues.webkit.org/results/13593141 New failing tests: fast/forms/datalist/input-appearance-range-with-datalist-zoomed.html fast/forms/datalist/input-appearance-range-with-transform.html fast/forms/datalist/input-appearance-range-with-datalist.html
WebKit Review Bot
Comment 15 2012-08-24 04:39:57 PDT
Created attachment 160394 [details] Archive of layout-test-results from gce-cr-linux-08 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: gce-cr-linux-08 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.39-gcg-201203291735-x86_64-with-Ubuntu-10.04-lucid
Keishi Hattori
Comment 16 2012-08-26 23:54:22 PDT
Keishi Hattori
Comment 17 2012-08-27 05:11:20 PDT
WebKit Review Bot
Comment 18 2012-08-28 00:25:34 PDT
Comment on attachment 160693 [details] Patch Rejecting attachment 160693 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/LayoutTests/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://queues.webkit.org/results/13660101
Keishi Hattori
Comment 19 2012-08-30 05:06:04 PDT
Keishi Hattori
Comment 20 2012-08-30 05:07:16 PDT
WebKit Review Bot
Comment 21 2012-08-30 07:55:54 PDT
Comment on attachment 161445 [details] Patch Clearing flags on attachment: 161445 Committed r127140: <http://trac.webkit.org/changeset/127140>
WebKit Review Bot
Comment 22 2012-08-30 07:55:58 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.