Tick marks don't match thumb when applying padding or border to input type=range https://bugs.webkit.org/show_bug.cgi?id=93791

Reviewed by Kent Tamura.

Source/WebCore:

Tick marks don't match thumb when styling input type=range. This change
calculate tick mark positions from track element size. Bug 94915 handles
drawing the track inside the content area.

Tests: fast/forms/datalist/input-appearance-range-with-padding-with-datalist.html
       fast/forms/datalist/input-appearance-range-with-transform.html

* html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::sliderTrackElement):
(WebCore):
* html/HTMLInputElement.h:
(HTMLInputElement):
* html/InputType.h:
(WebCore::InputType::sliderTrackElement):
* html/RangeInputType.cpp:
(WebCore::RangeInputType::sliderTrackElement):
(WebCore):
* html/RangeInputType.h:
(RangeInputType):
* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paintSliderTicks): rect's position is relative to
the transformed ancestor element. sliderBounds is absolute. We use them
to calculate the track element position relative to the transformed
ancestor element.

LayoutTests:

* fast/forms/datalist/input-appearance-range-with-datalist-rtl-expected.html:
* fast/forms/datalist/input-appearance-range-with-datalist-rtl.html:
* fast/forms/datalist/input-appearance-range-with-padding-with-datalist-expected.txt: Added.
* fast/forms/datalist/input-appearance-range-with-padding-with-datalist.html: Added.
* fast/forms/datalist/input-appearance-range-with-transform-expected.txt: Added.
* fast/forms/datalist/input-appearance-range-with-transform.html: Added.
* platform/chromium-mac/fast/forms/datalist/input-appearance-range-with-padding-with-datalist-expected.png: Added.
* platform/chromium-mac/fast/forms/datalist/input-appearance-range-with-transform-expected.png: Added.
* platform/chromium/TestExpectations:


Canonical link: https://commits.webkit.org/113311@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@127140 268f45cc-cd09-0410-ab3c-d52691b4dbfc