Source/WebCore/html/HTMLInputElement.cpp
@@ -210,6 +210,11 @@ HTMLElement* HTMLInputElement::sliderThumbElement() const
     return m_inputType->sliderThumbElement();
 }
 
+HTMLElement* HTMLInputElement::sliderTrackElement() const
+{
+    return m_inputType->sliderTrackElement();
+}
+
 HTMLElement* HTMLInputElement::placeholderElement() const
 {
     return m_inputType->placeholderElement();
