Source/WebCore/html/InputType.h
@@ -231,6 +231,7 @@ public:
     virtual HTMLElement* speechButtonElement() const { return 0; }
 #endif
     virtual HTMLElement* sliderThumbElement() const { return 0; }
+    virtual HTMLElement* sliderTrackElement() const { return 0; }
     virtual HTMLElement* placeholderElement() const;
 
     // Miscellaneous functions
