Source/WebCore/html/RangeInputType.h
@@ -70,6 +70,7 @@ private:
     virtual String sanitizeValue(const String& proposedValue) const OVERRIDE;
     virtual bool shouldRespectListAttribute() OVERRIDE;
     virtual HTMLElement* sliderThumbElement() const OVERRIDE;
+    virtual HTMLElement* sliderTrackElement() const OVERRIDE;
 #if ENABLE(DATALIST_ELEMENT)
     virtual void listAttributeTargetChanged() OVERRIDE;
     void updateTickMarkValues();
